Migrate to Spring Boot 4.0, Java 25, and Jackson 3.x
- Upgrade Java version from 21 to 25 across CI workflows, pom.xml, and Cloud Foundry manifests
- Upgrade Maven wrapper from 3.9.9 to 3.9.11
- Migrate Jackson from 2.x (com.fasterxml.jackson) to 3.x (tools.jackson)
  - Add jackson-bom 3.0.2 to dependency management
  - Update groupIds for jackson-dataformat-cbor and jackson-databind
- Update Spring Boot 4.0 security autoconfigure imports
  - EndpointRequest and PathRequest moved to new packages
  - Refactor security config to use lambda DSL
- Rename property spring.codec.max-in-memory-size to spring.http.codecs.max-in-memory-size
- Modernize code style
  - Remove redundant @Autowired annotations from constructors
  - Replace String.format() with .formatted() string templates
  - Reorder imports (project packages before framework packages)
- Update dependencies
  - java-uuid-generator: 5.1.1 → 5.2.0
  - spring-boot-starter-runtime-metadata: 0.7.0 → 1.0.0
  - Add spring-boot-webclient dependency
- Add spotless-maven-plugin 3.1.0 for code formatting
- Update Paketo buildpack JVM version to 25.0.1
- Remove deprecated wavefront profile

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>