@@ -70,7 +70,7 @@ public class AppUsageMonthly {
 
     @JsonIgnore
     public String getYearAndMonth() {
-        return String.join("-", String.valueOf(year), String.format("%02d", month));
+        return String.join("-", String.valueOf(year), "%02d".formatted(month));
     }
 
 }
