@@ -69,6 +69,6 @@ public class TaskUsageMonthly {
 
     @JsonIgnore
     public String getYearAndMonth() {
-        return String.join("-", String.valueOf(year), String.format("%02d", month));
+        return String.join("-", String.valueOf(year), "%02d".formatted(month));
     }
 }
